# src/main/resources/openapi/api.yaml
@@ -596,6 +596,33 @@ paths:
           content: {}
       x-codegen-request-body-name: body
   /subject/{subjectId}:
+    get:
+      tags:
+        - subject
+      summary: Get subject by ID
+      description: Returns a single subject
+      operationId: getSubjectById
+      parameters:
+        - name: subjectId
+          in: path
+          description: ID of subject to return
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SubjectDTO'
+        "400":
+          description: Invalid ID supplied
+          content: { }
+        "404":
+          description: Subject not found
+          content: { }
     put:
       tags:
         - subject
